fix: css styles to solve some layout issues

--- a/css/details.css
+++ b/css/details.css
@@ -10,6 +10,54 @@ body {
   margin: 0 auto;
 }
 
+.post-details-header {
+  display: flex;
+  max-width: 90rem;
+  justify-content: space-between;
+  align-items: center;
+  margin: 2rem auto;
+}
+
+.post-details-header a {
+  padding: 1rem;
+  border-radius: 6px;
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  align-items: center;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  text-transform: uppercase;
+  font-family: inherit;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.post-details-header a:link,
+.post-details-header a:visited {
+  text-decoration: none;
+}
+
+.post-details-header a:active,
+.post-details-header a:hover {
+  opacity: 0.7;
+}
+
+.post-details-header a:focus {
+  box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px;
+}
+
+.post-details-delete {
+  background-color: crimson;
+  color: white;
+}
+
+.post-details-edit {
+  background-color: var(--primary-color);
+  color: white;
+}
+
 .post-details {
   max-width: 90rem;
   margin: 2rem auto;
@@ -103,7 +151,6 @@ body {
   flex-direction: column;
   gap: 1.5rem;
   margin: 0 auto;
-  /* width: 85%; */
 }
 
 .new-comment__author,
@@ -132,10 +179,20 @@ body {
   background-color: var(--primary-color);
 }
 
+.new-comment__submit:disabled {
+  cursor: not-allowed;
+  background-color: darkgrey;
+  color: white;
+  opacity: 0.4;
+}
+
 .new-comment__submit:focus,
 .new-comment__text:focus,
 .new-comment__author:focus {
   box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px;
+}
+
+.post-details__comments-list {
 }
 
 .post-details__comment {
